# csiro-biomass-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: inference_dino.yaml  inference_multimodal_attention.yaml  inference_simple_concat.yaml  train_dino.yaml  train_multimodal_attention.yaml  train_simple_concat.yaml
scripts/: eda.py  inference.py  train.py  verify_setup.py
src/biomass/: __init__.py
src/biomass/data/: __init__.py  dataset.py  loader.py  transforms.py
src/biomass/models/: __init__.py  backbone.py  dino_pyramid_mamba.py  dino_vision_only.py  multimodal_attention_fusion.py  simple_concat_fusion.py
src/biomass/training/: __init__.py  cv.py  metrics.py  trainer.py
src/biomass/utils/: __init__.py  config.py  seed.py
