[project]
name = "csiro-biomass-prediction"
version = "0.1.0"
description = "Predict biomass using the provided pasture images with PyTorch."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "ipykernel>=6.30.1",
  "notebook>=7.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "timm>=0.9.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pillow>=10.0.0",
  "tqdm>=4.65.0",
  "albumentations>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biomass"]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]
